# cloudcraft-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  codecov.yml  gemini-extension.json  mcp.example.json  package-lock.json  package.json  pyproject.toml  server.json  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: clients.md  releasing.md
mcpb/: manifest.json
scripts/: build-mcpb.mjs  build-npm-bootstrap.mjs  build-npm-wheel.mjs  check-versions.mjs  smoke-stdio.mjs  verify-mcpb.mjs  verify-published-artifacts.mjs
src/cloudcraft_mcp/: __init__.py  __main__.py  client.py  server.py  types.py
tests/: test_client.py  test_server_startup.py  test_server_tools.py  test_validation.py
