[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cloudcraft-mcp"
version = "0.1.3"
description = "Model Context Protocol (MCP) server for Cloudcraft.co — list, read, export, create, update, and delete cloud architecture blueprints from Claude Desktop and other MCP clients."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "hypark5540", email = "hypark5540@naver.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "cloudcraft",
    "aws",
    "architecture-diagram",
    "claude",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    # typing.TypedDict on Python < 3.12 isn't introspectable by pydantic 2.x.
    # Pin typing_extensions explicitly so this works on the 3.10/3.11 CPython
    # shipped with most macOS/Ubuntu setups.
    "typing_extensions>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
cloudcraft-mcp = "cloudcraft_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/hypark5540/cloudcraft-mcp"
Repository = "https://github.com/hypark5540/cloudcraft-mcp"
Issues = "https://github.com/hypark5540/cloudcraft-mcp/issues"
"Cloudcraft API" = "https://developers.cloudcraft.co/"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudcraft_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "C4",  # comprehensions
    "SIM", # simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: unit tests (no network)",
    "integration: integration tests (hit real API)",
]

# Mirror the Codecov `ignore` list so the local pytest-cov percentage matches
# what Codecov reports. Trivial entry-point shims and package __init__ files
# shouldn't drag the number down.
#
# Note: coverage.py implicitly prepends ``*/`` to omit patterns without a path
# separator, so bare ``"server.py"`` would also match ``src/cloudcraft_mcp/
# server.py`` and wipe out coverage of the real module. ``source`` below
# already scopes measurement to the package, which excludes the repo-root
# back-compat shim, so we don't need to list it here.
[tool.coverage.run]
source = ["cloudcraft_mcp"]
omit = [
    "*/__init__.py",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false
